это чудовище Франкенштейна подает признаки жизни

--- a/server/desertsnake/templates/index.html
+++ b/server/desertsnake/templates/index.html
@@ -7,6 +7,9 @@
     <title>DesertSnake</title>
 </head>
 <body>
-    <script type="text/javascript" src="{% static "index.js" %}"></script>
+    <div id="root">
+        Если ты это видишь, всё пошло не так. Мне жаль.
+    </div>
+    <script type="text/javascript" src="{% static 'main.js' %}"></script>
 </body>
 </html>
